--- a/res/layout/spinner_item.xml
+++ b/res/layout/spinner_item.xml
@@ -8,8 +8,8 @@
         android:id="@+id/spinnerItem_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_gravity="center_horizontal|top"
+        android:gravity="center_horizontal|top"
         android:singleLine="true"
         android:textSize="44sp" >
     </TextView>
