--- a/res/layout/audio_play.xml
+++ b/res/layout/audio_play.xml
@@ -14,7 +14,7 @@
         <Spinner
             android:id="@+id/listenText_spinner"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:background="#696969"
             android:gravity="top" />
 
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/listenText_spinner"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:src="@drawable/listen_text_down" />
     </RelativeLayout>
 
@@ -37,7 +37,8 @@
         android:layout_below="@+id/listenText_topLinearLayout"
         android:background="#969696"
         android:ellipsize="marquee"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:verticalScrollbarPosition="defaultPosition" />
 
     <LinearLayout
         android:id="@+id/listenText_linearLayout_seekbar"
