--- a/res/layout/audio_play.xml
+++ b/res/layout/audio_play.xml
@@ -38,7 +38,16 @@
         android:background="#969696"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:verticalScrollbarPosition="defaultPosition" />
+        android:verticalScrollbarPosition="defaultPosition" >
+
+        <TextView
+            android:id="@+id/listenText_lyricView_textView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/hello_world" />
+    </com.runcom.jiazhangbang.listenText.LyricView>
 
     <LinearLayout
         android:id="@+id/listenText_linearLayout_seekbar"
