--- a/res/layout/audio_play.xml
+++ b/res/layout/audio_play.xml
@@ -42,11 +42,14 @@
 
         <TextView
             android:id="@+id/listenText_lyricView_textView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal|center_vertical"
-            android:text="@string/hello_world" />
+            android:text="@string/hello_world"
+            android:lineSpacingExtra="17sp"
+            android:textColor="#25CB73"
+            android:textSize="27sp" />
     </com.runcom.jiazhangbang.listenText.LyricView>
 
     <LinearLayout
