--- a/res/layout/listen_write.xml
+++ b/res/layout/listen_write.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CDCDD1"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -26,7 +27,17 @@
             android:layout_marginTop="2dp"
             android:src="@drawable/listen_text_down" />
     </RelativeLayout>
-    
+
+    <TextView
+        android:id="@+id/listen_write_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/listenText_linearLayout_seekbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center_horizontal"
+        android:text="asdf" />
+
     <LinearLayout
         android:id="@+id/listenText_linearLayout_seekbar"
         android:layout_width="match_parent"
@@ -63,14 +74,15 @@
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
         android:gravity="center" >
 
         <ImageButton
             android:layout_width="57dp"
             android:layout_height="wrap_content"
-            android:onClick="detailSetting"
+            android:onClick="showText"
             android:src="@drawable/listen_text_detail" />
-        
+
         <ImageButton
             android:layout_width="57dp"
             android:layout_height="wrap_content"
@@ -96,14 +108,5 @@
             android:onClick="detailSetting"
             android:src="@drawable/listen_text_detail" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/listen_write_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/listenText_linearLayout_seekbar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:text="正在听写..." />
 
 </RelativeLayout>
