--- a/res/layout/listen_write.xml
+++ b/res/layout/listen_write.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CDCDD1"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -27,6 +26,31 @@
             android:layout_marginTop="2dp"
             android:src="@drawable/listen_text_down" />
     </RelativeLayout>
+
+    <com.runcom.jiazhangbang.listenText.LyricView
+        android:id="@+id/listenText_lyricShow"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/listen_write_textView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/listenText_topLinearLayout"
+        android:background="#969696"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:verticalScrollbarPosition="defaultPosition" >
+
+        <TextView
+            android:id="@+id/listenText_lyricView_textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal|center_vertical"
+            android:lineSpacingExtra="30sp"
+            android:text="@string/hello_world"
+            android:textColor="#25CB73"
+            android:textSize="22sp" />
+    </com.runcom.jiazhangbang.listenText.LyricView>
 
     <TextView
         android:id="@+id/listen_write_textView"
@@ -74,7 +98,6 @@
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_alignParentBottom="true"
-        android:background="#FFFFFF"
         android:gravity="center" >
 
         <ImageButton
@@ -82,8 +105,7 @@
             android:layout_height="wrap_content"
             android:onClick="showText"
             android:src="@drawable/listen_text_detail" />
-
-        <ImageButton
+        <ImageButton
             android:layout_width="57dp"
             android:layout_height="wrap_content"
             android:onClick="previousText"
