--- a/res/layout/listen_write.xml
+++ b/res/layout/listen_write.xml
@@ -31,7 +31,7 @@
         android:id="@+id/listenText_lyricShow"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_above="@+id/listen_write_textView"
+        android:layout_above="@+id/listen_write_textView_nameShow"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/listenText_topLinearLayout"
@@ -41,26 +41,25 @@
         android:verticalScrollbarPosition="defaultPosition" >
 
         <TextView
-            android:id="@+id/listenText_lyricView_textView"
+            android:id="@+id/listenWrite_lyricView_textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal|center_vertical"
+            android:gravity="center_vertical|center_horizontal"
             android:lineSpacingExtra="30sp"
-            android:text="@string/hello_world"
+            android:text="不显示词语"
             android:textColor="#25CB73"
             android:textSize="22sp" />
     </com.runcom.jiazhangbang.listenText.LyricView>
 
     <TextView
-        android:id="@+id/listen_write_textView"
+        android:id="@+id/listen_write_textView_nameShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/listenText_linearLayout_seekbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:gravity="center_horizontal"
-        android:text="asdf" />
+        android:text="" />
 
     <LinearLayout
         android:id="@+id/listenText_linearLayout_seekbar"
@@ -105,7 +104,8 @@
             android:layout_height="wrap_content"
             android:onClick="showText"
             android:src="@drawable/listen_text_detail" />
-        <ImageButton
+
+        <ImageButton
             android:layout_width="57dp"
             android:layout_height="wrap_content"
             android:onClick="previousText"
